# timbre

./: .gitignore  README.md  malleus_requirements.txt  pyproject.toml  quinn_requirements.txt  requirements.txt  setup.py  unversioned_requirements.txt  versioned_requirements.txt
Natsiou_Model/: README.md
Natsiou_Model/PyTorch/: helper_NSynth.py  helper_data.py  helper_evaluate.py  helper_plotting.py  helper_train.py  helper_utils.py  main.py  plot.py  train.py
Natsiou_Model/TensorFlow/: cvae.ipynb
data/: __init__.py
data/utils/: nsynth.py
literature/: literature-review.tex  mybibliography.bib
model/: mvp.ipynb  run.py  train.py  utils.py  vae.py
model/data/nsynth/: data.py
model/single/: run.py
model_v2/: vae.py
model_v2/single/: config.py  run.py
quinnVAE/heidenreich/: dataclass.py  main.ipynb  vae.py
quinnVAE/models/heidenreich/: train.py
quinnVAE/models/subramanian/: vae.py
quinnVAE/subramanian/: base.py  experiment.py  utils.py
reference_models/Natsiou_Model/PyTorch/: helper_evaluate.py
reference_models/esling/: dafx2018figures.py  dafx2018learn.py
reference_models/esling/data/: __init__.py  audio.py  generic.py  loader.py  metadata.py  preprocessing.py  utils.py
reference_models/esling/misc/: perceptive.py
reference_models/esling/models/: __init__.py
reference_models/esling/nsgt3/: __init__.py  audio.py  cq.py  fft.py  fscale.py  nsdual.py  nsgfwin.py  nsgfwin_sl.py  nsgtf.py  nsgtf_loop.py  nsigtf.py  nsigtf_loop.py  reblock.py  slicing.py  slicq.py  unslicing.py  util.py
reference_models/esling/utils/: __init__.py  dataloader.py  openaudio.py  train.py
reference_models/esling/visualize/: vae_io.py  visualize_datacheck.py  visualize_dimred.py  visualize_plotting.py
reference_models/heidenreich/: __init__.py  dataclass.py  main.ipynb  run.py  train.py  vae.py
reference_models/heidenreich/multi/: config.py  run.py
reference_models/heidenreich/single/: config.py  run.py
reference_models/heidenreich/single_v2/: config.py  run.py  train.py
reference_models/natsiou/: helper_train.py
reference_models/natsiou/PyTorch/: helper_utils.py  tensor.pt
reference_models/subramanian/: base.py  main.py
reference_models/xavierVAE/utils/: train.py
research/: abstracts.tex  annot.bib  main.tex
timbre/: __init__.py
timbre/config/: defaults.py  malleus.py  utils.py
timbre/data/: nsynth.py
timbre/model/: vae.py
timbre/model/train/: run.py
timbre/train/: run.py  utils.py
xavierVAE/: learn.py  requirements.txt
xavierVAE/data/: __init__.py  audio.py  generic.py  loader.py  metadata.py  utils.py
xavierVAE/misc/: perceptive.py
xavierVAE/utils/: dataloader.py  oneHot.py  train.py
xavierVAE/visualize/: visualize_dimred.py  visualize_plotting.py
(+34 files in other folders)
