[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "timbre"
version = "0"
# dependencies = []
requires-python = ">=3.8"
authors = [{ name = "Quinn Ouyang", email = "qouyang3+timbre@illinois.edu" }]
# maintainers = [
#     { name = "Quinn qouyang", email = "qouyang3+timbre@illinois.edu" },
# ]
# description = ""
readme = "README.md"
# license = {file = "LICENSE"}
# keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    # "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dynamic = ["dependencies"]

[project.urls]
# homepage = ""
source = "https://github.com/quinnouyang/timbre"
github = "https://github.com/quinnouyang/timbre.git"
# download = ""
# changelog = ""
# documentation = ""
issues = "https://github.com/quinnouyang/timbre/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

# [tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
# cli = ["requirements-dev.txt"]
